feat(globals): Move global helper functions from Preload.php to Globals.php and enhance CSRF token handling

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
             "PhpMVC\\View\\Engine\\": "src/View/Engine/"
         },
         "files": [
-            "src/Preload.php"
+            "src/Globals.php"
         ]
     },
     "authors": [
